[CustomRadio] html + css + readme

--- a/CustomRadio/index.html
+++ b/CustomRadio/index.html
@@ -18,6 +18,30 @@
   <body>
     <div class="container">
       <!-- custom radio button -->
+      <div class="holder">
+        <h2>Custom Radio</h2>
+        <form action="#" class="customRadio">
+          <div class="row">
+            <p>Which text editor do you think is the best?</p>
+          </div>
+          <div class="row">
+            <input type="radio" name="textEditor" id="dreamweaver" checked />
+            <label for="dreamweaver">Adobe Dreamweaver</label>
+          </div>
+          <div class="row">
+            <input type="radio" name="textEditor" id="sublime" />
+            <label for="sublime">Sublime Text</label>
+          </div>
+          <div class="row">
+            <input type="radio" name="textEditor" id="vscode" />
+            <label for="vscode">Visual Studio Code</label>
+          </div>
+          <div class="row">
+            <input type="radio" name="textEditor" id="notepad" />
+            <label for="notepad">Notepad++</label>
+          </div>
+        </form>
+      </div>
     </div>
   </body>
 </html>
