[CustomCheckbox] html + css + readme

--- a/CustomCheckbox/index.html
+++ b/CustomCheckbox/index.html
@@ -16,6 +16,36 @@
   </head>
 
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <!-- custom checkbox -->
+      <div class="holder">
+        <h2>Custom Checkbox</h2>
+        <form action="#" class="customCheckbox">
+          <div class="row">
+            <p>Which programming language do you want to learn?</p>
+          </div>
+          <div class="row">
+            <input type="checkbox" id="javascript" checked />
+            <label for="javascript">Javascript</label>
+          </div>
+          <div class="row">
+            <input type="checkbox" id="php" />
+            <label for="php">PHP</label>
+          </div>
+          <div class="row">
+            <input type="checkbox" id="python" />
+            <label for="python">Python</label>
+          </div>
+          <div class="row">
+            <input type="checkbox" id="dotnet" />
+            <label for="dotnet">.Net</label>
+          </div>
+          <div class="row">
+            <input type="checkbox" id="node" />
+            <label for="node">Node JS</label>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
